build-tests/tests/fail/executor_without_current_thread.rs
use ui_tests::tokio_executor::current_thread;

fn main() {}
